Update on Overleaf.

--- a/listas.tex
+++ b/listas.tex
@@ -2415,7 +2415,7 @@ de modo que a multiplicidade algébrica de $0$ é $1$. Assim $A$ é triangular s
 
 \medskip
 \noindent
-Apesar da resposta ao exercício, ainda podemos concluir que, se $A=(a_{x,y})$ é uma matriz triangular superior, então $A$ é diagonalizável se e só se, para $r<s$ tais que $a_{r,r}=a_{s,s}$, tivermos $a_{r,s}=0$.
+Apesar da resposta ao exercício, ainda podemos concluir que, se $A=(a_{xy})$ é uma matriz triangular superior, então $A$ é diagonalizável se e só se, para $r<s$ tais que $a_{rr}=a_{ss}$, tivermos $a_{rs}=0$.
 
 \medskip
 \noindent
@@ -3022,7 +3022,7 @@ n & 0 & 0 & \ldots & 0 \\
 0 & 0 & 0 & \ldots & 0 \\
 \end{bmatrix} 
 \]
-\task[\pers{b}] Encontre uma matriz $P \in \mathcal{M}_n(\mathbb{R})$ tal que $PAP^{-1} = N.$ Mostre ainda que a soma dos elementos de $P$ é $n$, que $\tr(P) = 1$ e $\det(P) = -(n^{n-1}).$
+\task[\pers{b}] Encontre uma matriz $P \in \mathcal{M}_n(\mathbb{R})$ tal que $PAP^{-1} = N$ e satisfaz as seguintes condições: a soma dos elementos de $P$ é $n$, $\tr(P) = 1$ e $\det(P) = -(n^{n-1}).$
 }
 
 \solucao{}
@@ -4009,6 +4009,8 @@ verdade que $d \mid n?$ Justifique.
 \solucao{}
 \newpage
 \section{\textcolor{Floresta}{Lista 5}}
+\exercicio{1} 
+\solucao{}
 \end{document} 
 %https://en.wikipedia.org/wiki/Berlekamp%E2%80%93Massey_algorithm
 %https://math.stackexchange.com/questions/1186477/given-minimal-characteristic-polynomial-how-to-derive-linear-recurrence
